--- a/twitter/src/components/Post.css
+++ b/twitter/src/components/Post.css
@@ -10,3 +10,18 @@
 .text{
     padding-top: 30px;
 }
+.header{
+    position: sticky;
+    top: 0;
+    color: rgba(255, 255, 255, 0.562);
+    z-index: 100;
+    border: 1px solid var(--twitter-bg);
+    padding: 15px 20px;
+    backdrop-filter: blur(5px);
+    width: 519px;
+    height: 50px;
+}
+.header > h2{color: black;}
+body{
+    --twitter-bg:#e6ecf0;
+}
