--- a/twitter/src/components/search.css
+++ b/twitter/src/components/search.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     background-color: #e6ecf0;
+    width: 80%;
     padding: 10px;
     border-radius: 20px;
     margin-top: 10px;
@@ -11,13 +12,14 @@
 
 .searchbar>input {
     border: none;
+    width: max-content;
     outline: none;
     background-color: #e6ecf0;
 
 }
 
 .right_side {
-    width: auto;
+    width: 90%;
     height: auto;
 }
 
@@ -28,15 +30,18 @@
 
 .trending {
     background-color: #e6ecf0;
-    width: 100%;
+    width: 80%;
     border-radius: 20px;
     margin-top: 10px;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 40px;
     padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
 
+}
+.tweets{
+    margin-right:10px ;
 }
 
 .profile {
@@ -72,6 +77,7 @@
 
 .widgets__container {
     margin-top: 15px;
+    width: 75%;
     margin-left: 20px;
     padding: 20px;
     background-color: #f5f8fa;
